<resources>
    <string name="app_name">Kawanda Food App</string>
    <string name="splashtitle">Kawanda</string>
    <string name="splashtitle1">Food Processing</string>
    <string name="splashtitle2">Inventory Management Application</string>
    <string name="userlogin">Login</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup"> Create an Account</string>
    <string name="usersignup">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeatPswd">Repeat Password</string>
    <string name="Dashboard">Dashboard</string>
    <string name="kawanda">Kawanda Food Processing Center</string>
    <string name="kawanda2">Best Food Processing Center</string>
    <string name="kawandacopyright">\@ CopyRight 2020</string>
    <string name="products">Products</string>
    <string name="process">Process</string>
    <string name="reports">Reports</string>
    <string name="clients">Clients</string>
    <string name="addPrdct">Add Product</string>
    <string name="editPrdct">Edit Product</string>
    <string name="addProcess">Add Process</string>
    <string name="profile">Profile</string>
    <string name="changePass">Change Password</string>
    <string name="save">Save</string>
    <string name="fullname">Full Name</string>
    <string name="enterUsername">Enter Username</string>
    <string name="signup1">Dont have an account?</string>
    <string name="delete">delete</string>
    <string name="add_client">Add Client</string>
    <string name="new_password">Enter New Password</string>
    <string name="profile_tile">Kawanda Food Processing</string>
    <string name="process_name">Process Name</string>
    <string name="sub_processes">Sub Processes:</string>
    <string name="subprocess_name">SubProcess Name</string>
    <string name="no_subprocesses">No SubProcesses</string>
    <string name="is_sub_process_compeleted">Is sub process compeleted?</string>
    <string name="select_product">Select Product</string>
    <string name="select_client">Select Client</string>
    <string name="client">Client:</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity_kgs">Quantity(Kgs)</string>
    <string name="email_email_com">Email@email.com</string>
    <string name="username">Username</string>
    <string name="create_a_client">Create a Client</string>
    <string name="logout">Logout</string>
    <string name="product">Product</string>
    <string name="client_">Client</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>
    <string name="processes">Processes</string>
</resources>
