<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reports.ReportsActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/report"
        android:contentDescription="@string/reports"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorPrimary"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="-5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/users_count"
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:layout_marginBottom="1dip"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    tools:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Users"
                    android:textColor="@color/white"
                    android:textSize="30sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorPrimary">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/item"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/quantity"
                    android:textStyle="bold" />


            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:text="@string/products" />

                <TextView
                    android:id="@+id/product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="20" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:text="@string/clients" />

                <TextView
                    android:id="@+id/client_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="10" />


            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:text="@string/processes" />

                <TextView
                    android:id="@+id/process_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="4" />
            </TableRow>

        </TableLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorSmokeWhite">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/client_"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/product"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/process"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/clients_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="John" />

                <TextView
                    android:id="@+id/products_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="Maize" />

                <TextView
                    android:id="@+id/process_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    tools:text="Sorting" />
            </TableRow>

        </TableLayout>



    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:background="@color/gradientStop"
        android:foregroundGravity="bottom"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/bottom_nav" />

</RelativeLayout>